<resources>
    <string name="app_name">MyFirebase</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="friends">Friends</string>
    <string name="status">Status</string>
    <string name="search_result">Search Result</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_request">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>
