<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/nature"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="1dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/iv_image"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/iv_image"
        android:text="@string/accept"
        android:textColor="@color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_reject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_accept"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/iv_image"
        android:text="@string/reject"
        android:textColor="@color/white" />
</RelativeLayout>